# unixClient

./: CMakeLists.txt  main.c
include/: connection.h
include/messages/: messages.h  messages_micro.h  messages_micro_cfm.h  messages_micro_rej.h  messages_micro_req.h  messages_types.h
include/util/: double_linked_list.h  logger.h  queue.h  util.h
src/: connection.c  main.c
src/messages/: message_micro_rej.c  messages_micro_cfm.c  messages_micro_req.c  messages_types.c
src/util/: double_linked_list.c  logger.c  queue.c
